tests/snapshots/integration__integration_tests__switch__switch_with_base.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - "--base"
    - main
    - feature-with-base
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: [TEST_CONFIG]
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1mfeature-with-base[0m at [REPO].feature-with-base[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
